// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig allowedHosts option (devServer config) 1`] = `
Object {
  "allowedHosts": Array [
    ".host.com",
    "host2.com",
  ],
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig allowedHosts option 1`] = `
Object {
  "allowedHosts": Array [
    ".host.com",
    "host2.com",
  ],
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig bonjour option (devServer config) 1`] = `
Object {
  "bonjour": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig bonjour option 1`] = `
Object {
  "bonjour": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig cacert option (in devServer config) 1`] = `
Object {
  "ca": "/path/to/ca.pem",
  "hot": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig cacert option 1`] = `
Object {
  "ca": "/path/to/ca.pem",
  "hot": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig cert option (in devServer config) 1`] = `
Object {
  "cert": "/path/to/server.crt",
  "hot": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig cert option 1`] = `
Object {
  "cert": "/path/to/server.crt",
  "hot": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig clientLogLevel option (in devServer config) 1`] = `
Object {
  "clientLogLevel": "none",
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig clientLogLevel option 1`] = `
Object {
  "clientLogLevel": "none",
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig compress option (in devServer config) 1`] = `
Object {
  "compress": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig compress option 1`] = `
Object {
  "compress": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig disableHostCheck option (in devServer config) 1`] = `
Object {
  "disableHostCheck": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig disableHostCheck option 1`] = `
Object {
  "disableHostCheck": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig historyApiFallback option (in devServer config) 1`] = `
Object {
  "historyApiFallback": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig historyApiFallback option 1`] = `
Object {
  "historyApiFallback": true,
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig host option (devServer config) 1`] = `
Object {
  "host": "example.dev",
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig host option (localhost) 1`] = `
Object {
  "host": "localhost",
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig host option (null) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig host option (specify for CLI and devServer config) 1`] = `
Object {
  "host": "other.dev",
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig host option (undefined) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig host option 1`] = `
Object {
  "host": "example.dev",
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig hotOnly option (in devServer config) 1`] = `
Object {
  "hot": true,
  "hotOnly": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig hotOnly option 1`] = `
Object {
  "hot": true,
  "hotOnly": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig http2 option (in devServer config) 1`] = `
Object {
  "hot": true,
  "http2": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig http2 option 1`] = `
Object {
  "hot": true,
  "http2": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig https option (in devServer config) 1`] = `
Object {
  "hot": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig https option (in devServer config) 2`] = `
Object {
  "hot": true,
  "noInfo": true,
  "pfxPassphrase": "passphrase",
  "port": 8080,
}
`;

exports[`createConfig https option 1`] = `
Object {
  "hot": true,
  "https": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig info option (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig info option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig inline option (in devServer config) 1`] = `
Object {
  "hot": true,
  "inline": false,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig inline option 1`] = `
Object {
  "hot": true,
  "inline": false,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig key option (in devServer config) 1`] = `
Object {
  "hot": true,
  "https": true,
  "key": "/path/to/server.key",
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig key option 1`] = `
Object {
  "hot": true,
  "https": true,
  "key": "/path/to/server.key",
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig lazy option (in devServer config) 1`] = `
Object {
  "hot": true,
  "lazy": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig lazy option 1`] = `
Object {
  "hot": true,
  "lazy": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig liveReload option 1`] = `
Object {
  "hot": true,
  "liveReload": false,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig mimeTypes option - with force 1`] = `
Object {
  "hot": true,
  "mimeTypes": Object {
    "force": true,
    "typeMap": Object {
      "text/html": Array [
        "phtml",
      ],
    },
  },
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig mimeTypes option 1`] = `
Object {
  "hot": true,
  "mimeTypes": Object {
    "text/html": Array [
      "phtml",
    ],
  },
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig onListening option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "onListening": [Function],
  "port": 8080,
}
`;

exports[`createConfig open option (boolean) (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "open": true,
  "port": 8080,
}
`;

exports[`createConfig open option (boolean) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "open": true,
  "port": 8080,
}
`;

exports[`createConfig open option (browser) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "open": "Google Chrome",
  "port": 8080,
}
`;

exports[`createConfig openPage option (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "open": true,
  "openPage": "/different/page",
  "port": 8080,
}
`;

exports[`createConfig openPage option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "openPage": "/different/page",
  "port": 8080,
}
`;

exports[`createConfig overlay option (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "overlay": true,
  "port": 8080,
}
`;

exports[`createConfig overlay option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "overlay": true,
  "port": 8080,
}
`;

exports[`createConfig pfx option (in devServer config) 1`] = `
Object {
  "hot": true,
  "https": true,
  "noInfo": true,
  "pfx": "/path/to/file.pfx",
  "port": 8080,
}
`;

exports[`createConfig pfx option 1`] = `
Object {
  "hot": true,
  "https": true,
  "noInfo": true,
  "pfx": "/path/to/file.pfx",
  "port": 8080,
}
`;

exports[`createConfig pfxPassphrase option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "pfxPassphrase": "passphrase",
  "port": 8080,
}
`;

exports[`createConfig port option (difference) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 7070,
}
`;

exports[`createConfig port option (same) (null) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": null,
}
`;

exports[`createConfig port option (same) (string) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": "9090",
}
`;

exports[`createConfig port option (same) (undefined) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": undefined,
}
`;

exports[`createConfig port option (same) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 9090,
}
`;

exports[`createConfig profile option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "profile": "profile",
}
`;

exports[`createConfig progress option (devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "progress": true,
}
`;

exports[`createConfig progress option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "progress": true,
}
`;

exports[`createConfig public option (devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "public": true,
}
`;

exports[`createConfig public option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "public": true,
}
`;

exports[`createConfig quiet option (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "quiet": true,
}
`;

exports[`createConfig quiet option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "quiet": true,
}
`;

exports[`createConfig simple 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
}
`;

exports[`createConfig sockHost option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "sockHost": true,
}
`;

exports[`createConfig sockPath option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "sockPath": "path",
}
`;

exports[`createConfig sockPort option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "sockPort": "port",
}
`;

exports[`createConfig socket option (devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "socket": "socket",
}
`;

exports[`createConfig socket option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "socket": "socket",
}
`;

exports[`createConfig stats option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "stats": "errors-only",
}
`;

exports[`createConfig use webpack stats 1`] = `
Object {
  "clientLogLevel": "_clientLogLevel",
  "compress": "_compress",
  "contentBase": "_contentBase",
  "disableHostCheck": "_disableHostCheck",
  "filename": "_filename",
  "historyApiFallback": "_historyApiFallback",
  "host": "_foo",
  "hot": true,
  "hotOnly": "_hotOnly",
  "https": "_https",
  "inline": "_inline",
  "lazy": "_lazy",
  "noInfo": true,
  "open": "_open",
  "openPage": "_openPage",
  "pfxPassphrase": "_pfxPassphrase",
  "port": "_port",
  "progress": "_progress",
  "public": "_public",
  "publicPath": "_publicPath",
  "quiet": "_quiet",
  "socket": "_socket",
  "useLocalIp": "_useLocalIp",
  "watchContentBase": "_watchContentBase",
}
`;

exports[`createConfig use webpack stats 2`] = `
Object {
  "devServer": Object {
    "clientLogLevel": "_clientLogLevel",
    "compress": "_compress",
    "contentBase": "_contentBase",
    "disableHostCheck": "_disableHostCheck",
    "filename": "_filename",
    "historyApiFallback": "_historyApiFallback",
    "host": "_foo",
    "hot": true,
    "hotOnly": "_hotOnly",
    "https": "_https",
    "inline": "_inline",
    "lazy": "_lazy",
    "noInfo": true,
    "open": "_open",
    "openPage": "_openPage",
    "pfxPassphrase": "_pfxPassphrase",
    "port": "_port",
    "progress": "_progress",
    "public": "_public",
    "publicPath": "_publicPath",
    "quiet": "_quiet",
    "socket": "_socket",
    "useLocalIp": "_useLocalIp",
    "watchContentBase": "_watchContentBase",
  },
  "entry": "./app.js",
  "stats": Object {
    "assetsSort": "size",
  },
}
`;

exports[`createConfig useLocalIp option (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "useLocalIp": true,
}
`;

exports[`createConfig useLocalIp option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "useLocalIp": true,
}
`;

exports[`createConfig watchContentBase option (in devServer config) 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "watchContentBase": true,
}
`;

exports[`createConfig watchContentBase option 1`] = `
Object {
  "hot": true,
  "noInfo": true,
  "port": 8080,
  "watchContentBase": true,
}
`;
